// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Default 1`] = `
.c0 {
  padding: 2rem 1rem;
  margin-bottom: 2rem;
  background-color: #e9ecef;
  border-radius: .3rem;
}

<div
  className="c0"
/>
`;

exports[`Fluid Jumbotron 1`] = `
.c0 {
  padding: 2rem 1rem;
  margin-bottom: 2rem;
  background-color: #e9ecef;
  border-radius: .3rem;
  padding-right: 0;
  padding-left: 0;
  border-radius: 0;
}

<div
  className="c0"
/>
`;
